Deployment/deploy-service-ingress.yaml
apiVersion: v1
kind: Deployment
metadata:
  labels:
    app: tailspin-web
  name: tailspin-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailspin-web
  template:
    metadata:
      labels:
        app: tailspin-web
    spec:
      containers:
      - image: darkaru/tailspin:20
        imagePullPolicy: Always
        name: tailspin-web
        ports:
        - containerPort: 80
          protocol: TCP
---

kind: Service
metadata:
  labels:
    app: tailspin-web
  name: tailspin-web-service
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tailspin-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---

kind: Ingress
metadata:
  generation: 3
  name: ingress-tailspin
  namespace: default
spec:
  rules:
  - host: davitailspin.com
    http:
      paths:
      - backend:
          serviceName: tailspin-web-service
          servicePort: 80
